Try replacing tsc with tsup as build tool (#1727)
Signed-off-by: Jan Potoms <2109932+Janpot@users.noreply.github.com>
Co-authored-by: Pedro Ferreira <10789765+apedroferreira@users.noreply.github.com>
Co-authored-by: Bharat Kashyap <bharatkashyap@outlook.com>

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "dotenv-cli": "^7.1.0",
     "inquirer": "^9.1.5",
     "semver": "^7.3.8",
+    "tsup": "^6.7.0",
     "yargs": "^17.7.1"
   },
   "engines": {
