--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -9,12 +9,10 @@
     "cli": "./cli.js",
     "lint": "next lint && prettier --check .",
     "fix": "next lint --fix && prettier --write .",
-    "build:cli": "tsc -p tsconfig.cli.json",
+    "build:cli": "tsup",
     "build:next": "NODE_OPTIONS=--max-old-space-size=8192 next build",
-    "build:react-devtools": "rimraf ./public/reactDevtools && esbuild ./reactDevtools/bootstrap.ts --target=es6 --bundle --format=iife --outdir=./public/reactDevtools",
     "build:typings": "ts-node --esm ./scripts/typings.mts",
-    "dev:cli": "yarn build:cli --watch",
-    "dev:react-devtools": "yarn build:react-devtools --watch",
+    "dev:cli": "tsup --watch",
     "dev:typings": "yarn build:typings",
     "waitForApp": "ts-node --esm ./scripts/waitForApp.mts",
     "check-types": "tsc --noEmit"
