--- a/packages/toolpad/tsconfig.json
+++ b/packages/toolpad/tsconfig.json
@@ -1,15 +1,11 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "paths": {
-      // TODO: remove when typescript module resolution supports package exports. (v5.0 with moduleResolution: 'bundler')
-      "@mui/toolpad-core/createQuery": ["../toolpad-core/dist/esm/createQuery"],
-      "@mui/toolpad-core/createComponent": ["../toolpad-core/dist/esm/createComponent"]
-    },
     "module": "esnext",
+    "moduleResolution": "bundler",
     "alwaysStrict": true,
     "rootDir": "src",
-    "outDir": "dist/esm",
+    "outDir": "dist",
     "declaration": true,
     "target": "ES2020",
     "skipLibCheck": true,
