--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -5,12 +5,22 @@
   "author": "MUI Toolpad team",
   "homepage": "https://github.com/mui/mui-toolpad#readme",
   "license": "MIT",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "exports": {
-    ".": "./dist/index.js",
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./*": {
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.js",
+      "require": "./dist/*.cjs"
+    }
   },
   "files": [
     "dist"
@@ -21,8 +31,8 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "test": "echo \"Error: run tests from root\" && exit 1",
     "check-types": "tsc"
   },
@@ -30,12 +40,14 @@
     "url": "https://github.com/mui/mui-toolpad/issues"
   },
   "dependencies": {
+    "@mui/lab": "^5.0.0-alpha.121",
     "@mui/material": "^5.11.16",
     "@mui/toolpad-core": "^0.1.2",
     "@mui/x-data-grid-pro": "^6.0.4",
     "@mui/x-date-pickers": "^6.0.4",
     "dayjs": "^1.11.7",
-    "markdown-to-jsx": "^7.2.0"
+    "markdown-to-jsx": "^7.2.0",
+    "react-error-boundary": "^3.1.4"
   },
   "devDependencies": {
     "react": "^18.2.0"
