--- a/packages/toolpad-core/tsconfig.json
+++ b/packages/toolpad-core/tsconfig.json
@@ -12,5 +12,5 @@
     "pretty": true,
     "preserveWatchOutput": true
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
