--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -49,7 +49,8 @@
   "dependencies": {
     "@tanstack/react-query": "^4.28.0",
     "quickjs-emscripten": "^0.22.0",
-    "react-error-boundary": "^4.0.3"
+    "react-error-boundary": "^4.0.3",
+    "react-is": "^18.2.0"
   },
   "devDependencies": {
     "concurrently": "^8.0.1"
