--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -33,6 +33,11 @@
       "types": "./dist/runtime/index.d.ts",
       "import": "./dist/runtime/index.mjs",
       "require": "./dist/runtime/index.js"
+    },
+    "./canvas": {
+      "types": "./dist/runtime/canvas.d.ts",
+      "import": "./dist/runtime/canvas.mjs",
+      "require": "./dist/runtime/canvas.js"
     }
   },
   "dependencies": {
