--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -46,6 +46,7 @@
     "@mui/toolpad-core": "^0.1.4",
     "@mui/types": "^7.2.4",
     "@mui/utils": "^5.12.0",
+    "@mui/x-data-grid": "^6.1.0",
     "@mui/x-data-grid-generator": "^6.1.0",
     "@mui/x-data-grid-pro": "^6.1.0",
     "@mui/x-date-pickers": "^6.1.0",
@@ -59,6 +60,7 @@
     "abort-controller": "^3.0.0",
     "arg": "^5.0.2",
     "basic-auth": "^2.0.1",
+    "chalk": "^5.2.0",
     "chokidar": "^3.5.3",
     "clsx": "^1.2.1",
     "concurrently": "^8.0.1",
@@ -74,6 +76,7 @@
     "fractional-indexing": "^3.2.0",
     "get-port": "^6.1.2",
     "glob": "^9.3.4",
+    "google-auth-library": "^8.7.0",
     "history": "^5.3.0",
     "invariant": "^2.2.4",
     "json-to-ts": "^1.7.0",
@@ -110,6 +113,7 @@
     "whatwg-url": "^12.0.1",
     "yaml": "^2.2.1",
     "yaml-diff-patch": "^2.0.0",
+    "yargs": "^17.7.1",
     "zod": "^3.21.4",
     "zod-validation-error": "^1.1.0"
   },
