--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -95,6 +95,7 @@
     "json5": "^2.2.3",
     "lodash-es": "^4.17.21",
     "markdown-to-jsx": "^7.2.0",
+    "mime": "^3.0.0",
     "monaco-editor": "0.37.1",
     "mysql2": "^3.2.0",
     "next": "^13.3.0",
