--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -24,10 +24,11 @@
     "cli.js",
     ".next"
   ],
+  "type": "module",
   "exports": {
     "./package.json": "./package.json",
     "./cli": {
-      "require": "./dist/cli/index.js"
+      "require": "./dist/cli/index.cjs"
     },
     "./runtime": {
       "types": "./dist/runtime/index.d.ts",
