--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -90,6 +90,7 @@
     "glob": "^10.1.0",
     "google-auth-library": "^8.7.0",
     "history": "^5.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "invariant": "^2.2.4",
     "json-to-ts": "^1.7.0",
     "json5": "^2.2.3",
