Fix: Include `cause` in the `Error` type

--- a/packages/create-toolpad-app/tsconfig.json
+++ b/packages/create-toolpad-app/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2020",
     "module": "commonjs",
     "moduleResolution": "node16",
+    "lib": ["esnext"],
     "isolatedModules": true,
     "strict": true,
     "resolveJsonModule": true,
