--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "markdownlint-cli2": "^0.6.0",
     "prettier": "^2.8.7",
     "pretty-quick": "^3.1.3",
+    "react-inspector": "^6.0.1",
+    "recharts": "^2.5.0",
     "regenerator-runtime": "^0.13.11",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4",
