--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/gtag.js": "^0.0.12",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/react-inspector": "^4.0.2",
     "@types/rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -78,7 +79,7 @@
     "markdownlint-cli2": "^0.6.0",
     "prettier": "^2.8.7",
     "pretty-quick": "^3.1.3",
-    "react-inspector": "^6.0.1",
+    "react-inspector": "^5.1.1",
     "recharts": "^2.5.0",
     "regenerator-runtime": "^0.13.11",
     "rimraf": "^5.0.0",
