--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -67,7 +67,7 @@
     "@tanstack/react-query-devtools": "^4.29.3",
     "@types/cors": "^2.8.13",
     "@types/react-dev-utils": "^9.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "4.0.0-beta.1",
     "abort-controller": "^3.0.0",
     "arg": "^5.0.2",
     "basic-auth": "^2.0.1",
@@ -124,7 +124,7 @@
     "sucrase": "^3.32.0",
     "superjson": "^1.12.2",
     "ts-node": "^10.9.1",
-    "vite": "^4.2.1",
+    "vite": "^4.3.0-beta.8",
     "whatwg-url": "^12.0.1",
     "yaml": "^2.2.1",
     "yaml-diff-patch": "^2.0.0",
