--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -52,6 +52,7 @@
     "@mui/x-date-pickers": "^6.2.0",
     "@mui/x-date-pickers-pro": "^6.2.0",
     "@next/bundle-analyzer": "^13.3.0",
+    "@paralleldrive/cuid2": "^2.2.0",
     "@swc/wasm": "^1.3.51",
     "@tanstack/react-query": "^4.29.3",
     "@tanstack/react-query-devtools": "^4.29.3",
@@ -67,7 +68,6 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "csstype": "^3.1.2",
-    "cuid": "^3.0.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "esbuild": "0.17.16",
