Use npm registry to check for new versions (#1895)

--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -81,6 +81,7 @@
     "invariant": "^2.2.4",
     "json-to-ts": "^1.7.0",
     "json5": "^2.2.3",
+    "latest-version": "^7.0.0",
     "lodash-es": "^4.17.21",
     "markdown-to-jsx": "^7.2.0",
     "monaco-editor": "0.37.1",
@@ -105,6 +106,7 @@
     "react-is": "^18.2.0",
     "react-router-dom": "~6.3.0",
     "react-split-pane": "^0.1.92",
+    "semver": "^7.4.0",
     "serialize-javascript": "^6.0.1",
     "ses": "^0.18.3",
     "sucrase": "^3.32.0",
