--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "release:publish-canary": "lerna publish from-package  --force-publish --no-git-tag-version --no-push --no-git-reset --pre-dist-tag canary",
     "release:changelog": "dotenv -- node ./scripts/releaseChangelog.mjs --repo mui-toolpad",
     "test:build": "lerna run build --scope @mui/toolpad-core --scope @mui/toolpad-components --stream",
-    "test:integration": "playwright test --config ./test/integration/playwright.config.ts",
+    "test:integration": "rm -rf ./node_modules/.vite && playwright test --config ./test/integration/playwright.config.ts",
     "test": "jest",
     "check-types": "lerna run check-types",
     "toolpad": "toolpad"
@@ -48,9 +48,11 @@
     "@swc/helpers": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/archiver": "^5.3.2",
     "@types/gtag.js": "^0.0.12",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/react-inspector": "^4.0.2",
     "@types/rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -77,12 +79,15 @@
     "markdownlint-cli2": "^0.6.0",
     "prettier": "^2.8.7",
     "pretty-quick": "^3.1.3",
+    "react-inspector": "^5.1.1",
+    "recharts": "^2.5.0",
     "regenerator-runtime": "^0.13.11",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4",
     "yarn-deduplicate": "^6.0.1"
   },
   "dependencies": {
+    "archiver": "^5.3.1",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^7.2.1",
     "inquirer": "^9.1.5",
