--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -54,6 +54,7 @@
     "@mui/system": "^5.12.1",
     "@mui/toolpad-components": "^0.1.6",
     "@mui/toolpad-core": "^0.1.6",
+    "@mui/toolpad-utils": "0.1.6",
     "@mui/types": "^7.2.4",
     "@mui/utils": "^5.12.0",
     "@mui/x-data-grid": "^6.2.0",
