--- a/packages/toolpad-app/tsconfig.json
+++ b/packages/toolpad-app/tsconfig.json
@@ -8,7 +8,7 @@
       "@mui/toolpad-core/jsBrowserRuntime": ["../toolpad-core/dist/jsBrowserRuntime"],
       "@mui/toolpad-core/jsServerRuntime": ["../toolpad-core/dist/jsServerRuntime"],
       "@mui/toolpad-core/objectKey": ["../toolpad-core/dist/objectKey"],
-      "@mui/toolpad-core/utils/*": ["../toolpad-core/dist/utils/*"]
+      "@mui/toolpad-utils/*": ["../toolpad-utils/dist/*"]
     },
     "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
