--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -43,6 +43,7 @@
     "@mui/lab": "^5.0.0-alpha.127",
     "@mui/material": "^5.12.1",
     "@mui/toolpad-core": "^0.1.7",
+    "@mui/toolpad-utils": "0.1.7",
     "@mui/x-data-grid-pro": "^6.2.1",
     "@mui/x-date-pickers": "^6.2.1",
     "dayjs": "^1.11.7",
