Improve test for navigation overall + see if CI passes

--- a/test/integration/bindings/fixture-navigation/toolpad/pages/page2/page.yml
+++ b/test/integration/bindings/fixture-navigation/toolpad/pages/page2/page.yml
@@ -9,3 +9,11 @@ spec:
     - name: def
       value: "456"
   display: shell
+  content:
+    - component: PageRow
+      name: pageRow
+      children:
+        - component: Text
+          name: text
+          props:
+            value: welcome to page 2
