--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -52,7 +52,6 @@
     "@mui/x-date-pickers": "^6.2.0",
     "@mui/x-date-pickers-pro": "^6.2.0",
     "@next/bundle-analyzer": "^13.3.0",
-    "@paralleldrive/cuid2": "^2.2.0",
     "@swc/wasm": "^1.3.51",
     "@tanstack/react-query": "^4.29.3",
     "@tanstack/react-query-devtools": "^4.29.3",
@@ -85,6 +84,7 @@
     "markdown-to-jsx": "^7.2.0",
     "monaco-editor": "0.37.1",
     "mysql2": "^3.2.2",
+    "nanoid": "^4.0.2",
     "next": "^13.3.0",
     "node-fetch": "^2.6.9",
     "node-fetch-har": "^1.0.1",
