Another attempt to make CI pass

--- a/test/integration/bindings/fixture-navigation/toolpad/pages/page1/page.yml
+++ b/test/integration/bindings/fixture-navigation/toolpad/pages/page1/page.yml
@@ -18,5 +18,5 @@ spec:
                   def:
                     $$jsExpression: |
                       button.content
-            content: test
+            content: goToPage2
   display: shell
