Fix: Use `nanonid/non-secure` instead of `cuid` (#1912)

--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -79,7 +79,6 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "csstype": "^3.1.2",
-    "cuid": "^3.0.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "esbuild": "0.17.18",
@@ -101,6 +100,7 @@
     "mime": "^3.0.0",
     "monaco-editor": "0.37.1",
     "mysql2": "^3.2.3",
+    "nanoid": "^4.0.2",
     "next": "^13.3.1",
     "node-fetch": "^2.6.9",
     "node-fetch-har": "^1.0.1",
