--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -29,6 +29,11 @@
     "./cli": {
       "require": "./dist/cli/index.js"
     },
+    "./schema": {
+      "types": "./dist/schema/index.d.ts",
+      "import": "./dist/schema/index.mjs",
+      "require": "./dist/schema/index.js"
+    },
     "./runtime": {
       "types": "./dist/runtime/index.d.ts",
       "import": "./dist/runtime/index.mjs",
@@ -133,6 +138,7 @@
     "yaml-diff-patch": "^2.0.0",
     "yargs": "^17.7.1",
     "zod": "^3.21.4",
+    "zod-to-json-schema": "^3.20.4",
     "zod-validation-error": "^1.3.0"
   },
   "devDependencies": {
