Make vite runtime default

--- a/examples/custom-datagrid-column/package.json
+++ b/examples/custom-datagrid-column/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "toolpad dev --viteRuntime",
-    "build": "toolpad build --viteRuntime",
-    "start": "toolpad start --viteRuntime"
+    "dev": "toolpad dev",
+    "build": "toolpad build",
+    "start": "toolpad start"
   },
   "dependencies": {
     "@mui/toolpad": "latest"
