--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "yarn-deduplicate": "^6.0.1"
   },
   "dependencies": {
+    "@janpotoms/zod-to-json-schema": "^3.20.6",
     "archiver": "^5.3.1",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^7.2.1",
@@ -97,7 +98,8 @@
     "semver": "^7.5.0",
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
-    "yargs": "^17.7.1"
+    "yargs": "^17.7.1",
+    "zod": "^3.21.4"
   },
   "engines": {
     "npm": "please-use-yarn",
