--- a/docs/package.json
+++ b/docs/package.json
@@ -30,6 +30,7 @@
     "@mui/material": "^5.12.1",
     "@mui/monorepo": "https://github.com/mui/material-ui.git",
     "@mui/styles": "^5.12.0",
+    "@mui/toolpad-utils": "0.1.7",
     "@mui/utils": "^5.12.0",
     "@trendmicro/react-interpolate": "^0.5.5",
     "@types/lodash": "^4.14.194",
@@ -55,6 +56,7 @@
     "express": "^4.18.2",
     "fg-loadcss": "^3.1.0",
     "fs-extra": "^11.1.1",
+    "invariant": "^2.2.4",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
