--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "release:publish-canary": "lerna publish from-package  --force-publish --no-git-tag-version --no-push --no-git-reset --pre-dist-tag canary",
     "release:changelog": "dotenv -- node ./scripts/releaseChangelog.mjs --repo mui-toolpad",
     "test:build": "lerna run build --scope @mui/toolpad-core --scope @mui/toolpad-components --stream",
-    "test:integration": "rm -rf ./node_modules/.vite && playwright test --config ./test/integration/playwright.config.ts",
+    "test:integration": "rm -rf ./node_modules/.vite && playwright test --config ./test/playwright.config.ts",
     "test": "jest",
     "check-types": "lerna run check-types",
     "toolpad": "toolpad"
