--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,7 @@ services:
       dockerfile: ./playwright.Dockerfile
     volumes:
       - ./:/work/
+      - ./.yarn-playwright-cache:/.yarn-cache
     working_dir: /work/
+    environment:
+      YARN_CACHE_FOLDER: /.yarn-cache
