--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "release:changelog": "dotenv -- node ./scripts/releaseChangelog.mjs --repo mui-toolpad",
     "test:build": "lerna run build --scope @mui/toolpad-core --scope @mui/toolpad-components --stream",
     "test:integration": "rm -rf ./node_modules/.vite && playwright test --config ./test/playwright.config.ts",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test": "lerna run test",
     "check-types": "lerna run check-types",
     "toolpad": "toolpad"
   },
