--- a/packages/toolpad-utils/tsconfig.json
+++ b/packages/toolpad-utils/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "module": "ESNext",
+    "moduleResolution": "nodenext",
     "alwaysStrict": true,
     "rootDir": "src",
     "outDir": "dist",
