--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "globby": "^13.1.4",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-fail-on-console": "^3.1.1",
     "lerna": "^6.6.1",
     "markdownlint-cli2": "^0.7.1",
     "prettier": "^2.8.8",
