--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -101,7 +101,7 @@
     "monaco-editor": "0.37.1",
     "mysql2": "^3.2.4",
     "nanoid": "^4.0.2",
-    "next": "^13.3.2",
+    "next": "13.3.2",
     "node-fetch": "^2.6.9",
     "node-fetch-har": "^1.0.1",
     "open-editor": "^4.0.0",
