--- a/package.json
+++ b/package.json
@@ -42,60 +42,60 @@
     "toolpad": "toolpad"
   },
   "devDependencies": {
-    "@jest/globals": "^29.5.0",
+    "@jest/globals": "29.5.0",
     "@mui/monorepo": "https://github.com/mui/material-ui.git",
     "@next/eslint-plugin-next": "13.3.2",
-    "@playwright/test": "^1.33.0",
-    "@swc/helpers": "^0.5.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/archiver": "^5.3.2",
-    "@types/gtag.js": "^0.0.12",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^18.16.3",
-    "@types/react-inspector": "^4.0.2",
-    "@types/rimraf": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "babel-plugin-transform-rename-import": "^2.3.0",
-    "chalk": "^5.2.0",
-    "eslint": "^8.39.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-typescript-enum": "^2.1.0",
-    "execa": "^7.1.1",
-    "format-util": "^1.0.5",
-    "globby": "^13.1.4",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "lerna": "^6.6.1",
-    "markdownlint-cli2": "^0.7.1",
-    "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3",
-    "react-inspector": "^5.1.1",
-    "recharts": "^2.5.0",
-    "regenerator-runtime": "^0.13.11",
-    "rimraf": "^5.0.0",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4",
-    "yarn-deduplicate": "^6.0.1"
+    "@playwright/test": "1.33.0",
+    "@swc/helpers": "0.5.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "14.0.0",
+    "@types/archiver": "5.3.2",
+    "@types/gtag.js": "0.0.12",
+    "@types/jest": "29.5.1",
+    "@types/node": "18.16.3",
+    "@types/react-inspector": "4.0.2",
+    "@types/rimraf": "3.0.2",
+    "@typescript-eslint/eslint-plugin": "5.59.1",
+    "@typescript-eslint/parser": "5.59.1",
+    "babel-plugin-transform-rename-import": "2.3.0",
+    "chalk": "5.2.0",
+    "eslint": "8.39.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-import-resolver-webpack": "0.13.2",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-mocha": "10.1.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-typescript-enum": "2.1.0",
+    "execa": "7.1.1",
+    "format-util": "1.0.5",
+    "globby": "13.1.4",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
+    "lerna": "6.6.1",
+    "markdownlint-cli2": "0.7.1",
+    "prettier": "2.8.8",
+    "pretty-quick": "3.1.3",
+    "react-inspector": "5.1.1",
+    "recharts": "2.5.0",
+    "regenerator-runtime": "0.13.11",
+    "rimraf": "5.0.0",
+    "ts-jest": "29.1.0",
+    "typescript": "5.0.4",
+    "yarn-deduplicate": "6.0.1"
   },
   "dependencies": {
-    "archiver": "^5.3.1",
-    "cross-env": "^7.0.3",
-    "dotenv-cli": "^7.2.1",
-    "inquirer": "^9.2.0",
-    "semver": "^7.5.0",
-    "tsup": "^6.7.0",
-    "yargs": "^17.7.2"
+    "archiver": "5.3.1",
+    "cross-env": "7.0.3",
+    "dotenv-cli": "7.2.1",
+    "inquirer": "9.2.0",
+    "semver": "7.5.0",
+    "tsup": "6.7.0",
+    "yargs": "17.7.2"
   },
   "engines": {
     "npm": "please-use-yarn",
