--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -30,12 +30,12 @@
     "node": ">=16.17"
   },
   "dependencies": {
-    "chalk": "^5.2.0",
-    "execa": "^7.1.1",
-    "inquirer": "^9.2.0"
+    "chalk": "5.2.0",
+    "execa": "7.1.1",
+    "inquirer": "9.2.0"
   },
   "devDependencies": {
-    "@types/inquirer": "^9.0.3"
+    "@types/inquirer": "9.0.3"
   },
   "gitHead": "28308edc7bd61700e63b44e6ff5ff1508d1f2a8b"
 }
