--- a/packages/eslint-plugin-material-ui/package.json
+++ b/packages/eslint-plugin-material-ui/package.json
@@ -5,11 +5,11 @@
   "description": "Custom eslint rules for MUI.",
   "main": "src/index.js",
   "dependencies": {
-    "emoji-regex": "^10.2.1"
+    "emoji-regex": "10.2.1"
   },
   "devDependencies": {
-    "@types/eslint": "^8.37.0",
-    "@typescript-eslint/parser": "^5.59.1"
+    "@types/eslint": "8.37.0",
+    "@typescript-eslint/parser": "5.59.1"
   },
   "scripts": {},
   "repository": {
