--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -31,12 +31,12 @@
     "toolpad": "./index.cjs"
   },
   "dependencies": {
-    "@mui/toolpad-app": "^0.1.10",
-    "@mui/toolpad-core": "^0.1.10",
-    "arg": "^5.0.2",
-    "concurrently": "^8.0.1",
-    "dotenv": "^16.0.3",
-    "execa": "^7.1.1"
+    "@mui/toolpad-app": "0.1.10",
+    "@mui/toolpad-core": "0.1.10",
+    "arg": "5.0.2",
+    "concurrently": "8.0.1",
+    "dotenv": "16.0.3",
+    "execa": "7.1.1"
   },
   "engines": {
     "node": ">=16.17"
