--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -52,7 +52,7 @@
     "concurrently": "8.0.1"
   },
   "peerDependencies": {
-    "react": "18.0.0"
+    "react": "^18.0.0"
   },
   "publishConfig": {
     "access": "public"
