--- a/packages/toolpad-utils/package.json
+++ b/packages/toolpad-utils/package.json
@@ -42,7 +42,7 @@
     "url": "https://github.com/mui/mui-toolpad/issues"
   },
   "peerDependencies": {
-    "react": "18.0.0"
+    "react": "^18.0.0"
   },
   "publishConfig": {
     "access": "public"
