--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -42,14 +42,14 @@
     "url": "https://github.com/mui/mui-toolpad/issues"
   },
   "dependencies": {
-    "@mui/toolpad-utils": "^0.1.10",
-    "@tanstack/react-query": "^4.29.5",
-    "quickjs-emscripten": "^0.23.0",
-    "react-error-boundary": "^4.0.4",
-    "react-is": "^18.2.0"
+    "@mui/toolpad-utils": "0.1.10",
+    "@tanstack/react-query": "4.29.5",
+    "quickjs-emscripten": "0.23.0",
+    "react-error-boundary": "4.0.4",
+    "react-is": "18.2.0"
   },
   "devDependencies": {
-    "concurrently": "^8.0.1"
+    "concurrently": "8.0.1"
   },
   "peerDependencies": {
     "react": "^18.0.0"
