--- a/packages/toolpad-utils/package.json
+++ b/packages/toolpad-utils/package.json
@@ -49,6 +49,6 @@
   },
   "gitHead": "28308edc7bd61700e63b44e6ff5ff1508d1f2a8b",
   "dependencies": {
-    "react-is": "^18.2.0"
+    "react-is": "18.2.0"
   }
 }
