--- a/docs/package.json
+++ b/docs/package.json
@@ -89,6 +89,7 @@
     "@babel/plugin-transform-react-constant-elements": "7.21.3",
     "@babel/preset-typescript": "7.21.5",
     "@types/doctrine": "0.0.5",
+    "@types/react-is": "^18.2.0",
     "cpy-cli": "4.2.0",
     "cross-fetch": "3.1.5",
     "gm": "1.25.0",
