--- a/examples/dog-app/toolpad/pages/page/page.yml
+++ b/examples/dog-app/toolpad/pages/page/page.yml
@@ -12,6 +12,7 @@ spec:
         method: GET
         transform: return Object.entries(data.message)
         transformEnabled: true
+        searchParams: []
     - name: imageQuery
       query:
         kind: rest
@@ -20,6 +21,7 @@ spec:
             `https://dog.ceo/api/breed/${parameters.breed}/images/random`
         headers: []
         method: GET
+        searchParams: []
       parameters:
         - name: breed
           value:
