--- a/examples/user-admin-app/toolpad/pages/user_details_app/page.yml
+++ b/examples/user-admin-app/toolpad/pages/user_details_app/page.yml
@@ -12,6 +12,7 @@ spec:
           props:
             sx:
               border: 1
+              borderColor: primary.main
             elevation: 0
           children:
             - component: PageRow
@@ -43,6 +44,7 @@ spec:
                             horizontalAlign: center
                           props:
                             sx:
+                              color: primary.main
                               fontWeight: bold
                             value: Acme corp. admin app
                             variant: h4
@@ -51,32 +53,42 @@ spec:
                       props:
                         value: Acme corp. is a global e-com company and this is a support application to
                           add new users
-                    - component: PageRow
-                      name: pageRow2
+                    - component: Paper
+                      name: paper3
+                      layout:
+                        columnSize: 1
                       props:
-                        justifyContent: start
+                        sx:
+                          bgcolor: primary.main
                       children:
-                        - component: Text
-                          name: typography1
-                          layout:
-                            columnSize: 1.7057728416939433
-                            horizontalAlign: center
-                          props:
-                            value: User list
-                            variant: h4
-                        - component: Button
-                          name: button1
-                          layout:
-                            columnSize: 0.2942271583060568
-                            horizontalAlign: center
-                          props:
-                            variant: outlined
-                            size: medium
-                            content: REFRESH
-                            onClick:
-                              $$jsExpressionAction: get.refetch()
-                            color: primary
-                            loading: false
+                        - component: PageRow
+                          name: pageRow5
+                          children:
+                            - component: Text
+                              name: typography1
+                              layout:
+                                columnSize: 1.7493609828496042
+                              props:
+                                sx:
+                                  color: common.white
+                                value: User list
+                                variant: h6
+                            - component: Button
+                              name: button1
+                              layout:
+                                columnSize: 0.25063901715039577
+                                horizontalAlign: end
+                              props:
+                                size: medium
+                                content: REFRESH
+                                onClick:
+                                  $$jsExpressionAction: get.refetch()
+                                variant: outlined
+                                color: secondary
+                                loading: false
+                                sx:
+                                  color: common.white
+                                  borderColor: common.white
                     - component: DataGrid
                       name: dataGrid2
                       props:
@@ -106,17 +118,25 @@ spec:
                           - field: image
                             type: image
                     - component: Paper
-                      name: paper
-                      props:
-                        elevation: 0
-                    - component: Text
-                      name: typography2
+                      name: paper1
                       layout:
                         columnSize: 1
-                        horizontalAlign: center
                       props:
-                        value: Form to add a new user
-                        variant: h4
+                        sx:
+                          bgcolor: primary.main
+                      children:
+                        - component: PageRow
+                          name: pageRow1
+                          children:
+                            - component: Text
+                              name: typography2
+                              layout:
+                                columnSize: 1
+                              props:
+                                sx:
+                                  color: common.white
+                                value: Form to add a new user
+                                variant: h6
                     - component: Form
                       name: form
                       layout:
@@ -241,14 +261,15 @@ spec:
                                             multiple: false
   queries:
     - name: get
+      enabled: true
       query:
-        kind: local
         function: getCustomers
+        kind: local
       parameters:
         - name: name
           value: hi
-      enabled: true
     - name: add
+      mode: mutation
       query:
         function: addCustomer
         kind: local
@@ -293,4 +314,3 @@ spec:
           value:
             $$jsExpression: |
               id_number.value
-      mode: mutation
