--- a/docs/package.json
+++ b/docs/package.json
@@ -55,6 +55,7 @@
     "express": "4.18.2",
     "fg-loadcss": "3.1.0",
     "fs-extra": "11.1.1",
+    "invariant": "2.2.4",
     "jss-rtl": "0.3.0",
     "lodash": "4.17.21",
     "lz-string": "1.5.0",
@@ -89,6 +90,7 @@
     "@babel/plugin-transform-react-constant-elements": "7.21.3",
     "@babel/preset-typescript": "7.21.5",
     "@types/doctrine": "0.0.5",
+    "@types/json-schema": "7.0.11",
     "@types/react-is": "^18.2.0",
     "cpy-cli": "4.2.0",
     "cross-fetch": "3.1.5",
